info0602/aides/projet_paul/Projet/src/json/y.output
Terminaux inutilisés dans la grammaire

   CHAR


État 8 conflits: 1 décalage/réduction
État 17 conflits: 2 décalage/réduction


Grammaire

    0 $accept: OBJET $end

    1 OBJET: DEBUT_OBJ MEMBRES FIN_OBJ

    2 ARRAY: DEBUT_ARRAY VALEURS FIN_ARRAY
    3      | DEBUT_ARRAY MEMBRES FIN_ARRAY
    4      | DEBUT_ARRAY VALEUR FIN_ARRAY
    5      | DEBUT_ARRAY MEMBRE FIN_ARRAY

    6 MEMBRES: MEMBRES SEPARATEUR MEMBRE
    7        | MEMBRE SEPARATEUR MEMBRE
    8        | MEMBRE

    9 MEMBRE: CHAMP
   10       | ARRAY
   11       | OBJET

   12 CHAMP: STRING AFFECTATEUR VALEUR
   13      | STRING AFFECTATEUR ARRAY
   14      | STRING AFFECTATEUR OBJET

   15 VALEURS: VALEURS SEPARATEUR VALEUR
   16        | VALEUR SEPARATEUR VALEUR

   17 VALEUR: ENTIER
   18       | DECIMALE
   19       | BOOL
   20       | STRING


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
ENTIER (258) 17
DECIMALE (259) 18
BOOL (260) 19
CHAR (261)
STRING (262) 12 13 14 20
DEBUT_OBJ (263) 1
FIN_OBJ (264) 1
DEBUT_ARRAY (265) 2 3 4 5
FIN_ARRAY (266) 2 3 4 5
AFFECTATEUR (267) 12 13 14
SEPARATEUR (268) 6 7 15 16


Non-terminaux, suivis des règles où ils apparaissent

$accept (14)
    à gauche: 0
OBJET (15)
    à gauche: 1, à droite: 0 11 14
ARRAY (16)
    à gauche: 2 3 4 5, à droite: 10 13
MEMBRES (17)
    à gauche: 6 7 8, à droite: 1 3 6
MEMBRE (18)
    à gauche: 9 10 11, à droite: 5 6 7 8
CHAMP (19)
    à gauche: 12 13 14, à droite: 9
VALEURS (20)
    à gauche: 15 16, à droite: 2 15
VALEUR (21)
    à gauche: 17 18 19 20, à droite: 4 12 15 16


État 0

    0 $accept: . OBJET $end

    DEBUT_OBJ  décalage et aller à l'état 1

    OBJET  aller à l'état 2


État 1

    1 OBJET: DEBUT_OBJ . MEMBRES FIN_OBJ

    STRING       décalage et aller à l'état 3
    DEBUT_OBJ    décalage et aller à l'état 1
    DEBUT_ARRAY  décalage et aller à l'état 4

    OBJET    aller à l'état 5
    ARRAY    aller à l'état 6
    MEMBRES  aller à l'état 7
    MEMBRE   aller à l'état 8
    CHAMP    aller à l'état 9


État 2

    0 $accept: OBJET . $end

    $end  décalage et aller à l'état 10


État 3

   12 CHAMP: STRING . AFFECTATEUR VALEUR
   13      | STRING . AFFECTATEUR ARRAY
   14      | STRING . AFFECTATEUR OBJET

    AFFECTATEUR  décalage et aller à l'état 11


État 4

    2 ARRAY: DEBUT_ARRAY . VALEURS FIN_ARRAY
    3      | DEBUT_ARRAY . MEMBRES FIN_ARRAY
    4      | DEBUT_ARRAY . VALEUR FIN_ARRAY
    5      | DEBUT_ARRAY . MEMBRE FIN_ARRAY

    ENTIER       décalage et aller à l'état 12
    DECIMALE     décalage et aller à l'état 13
    BOOL         décalage et aller à l'état 14
    STRING       décalage et aller à l'état 15
    DEBUT_OBJ    décalage et aller à l'état 1
    DEBUT_ARRAY  décalage et aller à l'état 4

    OBJET    aller à l'état 5
    ARRAY    aller à l'état 6
    MEMBRES  aller à l'état 16
    MEMBRE   aller à l'état 17
    CHAMP    aller à l'état 9
    VALEURS  aller à l'état 18
    VALEUR   aller à l'état 19


État 5

   11 MEMBRE: OBJET .

    $défaut  réduction par utilisation de la règle 11 (MEMBRE)


État 6

   10 MEMBRE: ARRAY .

    $défaut  réduction par utilisation de la règle 10 (MEMBRE)


État 7

    1 OBJET: DEBUT_OBJ MEMBRES . FIN_OBJ
    6 MEMBRES: MEMBRES . SEPARATEUR MEMBRE

    FIN_OBJ     décalage et aller à l'état 20
    SEPARATEUR  décalage et aller à l'état 21


État 8

    7 MEMBRES: MEMBRE . SEPARATEUR MEMBRE
    8        | MEMBRE .

    SEPARATEUR  décalage et aller à l'état 22

    SEPARATEUR  [réduction par utilisation de la règle 8 (MEMBRES)]
    $défaut    réduction par utilisation de la règle 8 (MEMBRES)


État 9

    9 MEMBRE: CHAMP .

    $défaut  réduction par utilisation de la règle 9 (MEMBRE)


État 10

    0 $accept: OBJET $end .

    $défaut  accepter


État 11

   12 CHAMP: STRING AFFECTATEUR . VALEUR
   13      | STRING AFFECTATEUR . ARRAY
   14      | STRING AFFECTATEUR . OBJET

    ENTIER       décalage et aller à l'état 12
    DECIMALE     décalage et aller à l'état 13
    BOOL         décalage et aller à l'état 14
    STRING       décalage et aller à l'état 23
    DEBUT_OBJ    décalage et aller à l'état 1
    DEBUT_ARRAY  décalage et aller à l'état 4

    OBJET   aller à l'état 24
    ARRAY   aller à l'état 25
    VALEUR  aller à l'état 26


État 12

   17 VALEUR: ENTIER .

    $défaut  réduction par utilisation de la règle 17 (VALEUR)


État 13

   18 VALEUR: DECIMALE .

    $défaut  réduction par utilisation de la règle 18 (VALEUR)


État 14

   19 VALEUR: BOOL .

    $défaut  réduction par utilisation de la règle 19 (VALEUR)


État 15

   12 CHAMP: STRING . AFFECTATEUR VALEUR
   13      | STRING . AFFECTATEUR ARRAY
   14      | STRING . AFFECTATEUR OBJET
   20 VALEUR: STRING .

    AFFECTATEUR  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 20 (VALEUR)


État 16

    3 ARRAY: DEBUT_ARRAY MEMBRES . FIN_ARRAY
    6 MEMBRES: MEMBRES . SEPARATEUR MEMBRE

    FIN_ARRAY   décalage et aller à l'état 27
    SEPARATEUR  décalage et aller à l'état 21


État 17

    5 ARRAY: DEBUT_ARRAY MEMBRE . FIN_ARRAY
    7 MEMBRES: MEMBRE . SEPARATEUR MEMBRE
    8        | MEMBRE .

    FIN_ARRAY   décalage et aller à l'état 28
    SEPARATEUR  décalage et aller à l'état 22

    FIN_ARRAY   [réduction par utilisation de la règle 8 (MEMBRES)]
    SEPARATEUR  [réduction par utilisation de la règle 8 (MEMBRES)]


État 18

    2 ARRAY: DEBUT_ARRAY VALEURS . FIN_ARRAY
   15 VALEURS: VALEURS . SEPARATEUR VALEUR

    FIN_ARRAY   décalage et aller à l'état 29
    SEPARATEUR  décalage et aller à l'état 30


État 19

    4 ARRAY: DEBUT_ARRAY VALEUR . FIN_ARRAY
   16 VALEURS: VALEUR . SEPARATEUR VALEUR

    FIN_ARRAY   décalage et aller à l'état 31
    SEPARATEUR  décalage et aller à l'état 32


État 20

    1 OBJET: DEBUT_OBJ MEMBRES FIN_OBJ .

    $défaut  réduction par utilisation de la règle 1 (OBJET)


État 21

    6 MEMBRES: MEMBRES SEPARATEUR . MEMBRE

    STRING       décalage et aller à l'état 3
    DEBUT_OBJ    décalage et aller à l'état 1
    DEBUT_ARRAY  décalage et aller à l'état 4

    OBJET   aller à l'état 5
    ARRAY   aller à l'état 6
    MEMBRE  aller à l'état 33
    CHAMP   aller à l'état 9


État 22

    7 MEMBRES: MEMBRE SEPARATEUR . MEMBRE

    STRING       décalage et aller à l'état 3
    DEBUT_OBJ    décalage et aller à l'état 1
    DEBUT_ARRAY  décalage et aller à l'état 4

    OBJET   aller à l'état 5
    ARRAY   aller à l'état 6
    MEMBRE  aller à l'état 34
    CHAMP   aller à l'état 9


État 23

   20 VALEUR: STRING .

    $défaut  réduction par utilisation de la règle 20 (VALEUR)


État 24

   14 CHAMP: STRING AFFECTATEUR OBJET .

    $défaut  réduction par utilisation de la règle 14 (CHAMP)


État 25

   13 CHAMP: STRING AFFECTATEUR ARRAY .

    $défaut  réduction par utilisation de la règle 13 (CHAMP)


État 26

   12 CHAMP: STRING AFFECTATEUR VALEUR .

    $défaut  réduction par utilisation de la règle 12 (CHAMP)


État 27

    3 ARRAY: DEBUT_ARRAY MEMBRES FIN_ARRAY .

    $défaut  réduction par utilisation de la règle 3 (ARRAY)


État 28

    5 ARRAY: DEBUT_ARRAY MEMBRE FIN_ARRAY .

    $défaut  réduction par utilisation de la règle 5 (ARRAY)


État 29

    2 ARRAY: DEBUT_ARRAY VALEURS FIN_ARRAY .

    $défaut  réduction par utilisation de la règle 2 (ARRAY)


État 30

   15 VALEURS: VALEURS SEPARATEUR . VALEUR

    ENTIER    décalage et aller à l'état 12
    DECIMALE  décalage et aller à l'état 13
    BOOL      décalage et aller à l'état 14
    STRING    décalage et aller à l'état 23

    VALEUR  aller à l'état 35


État 31

    4 ARRAY: DEBUT_ARRAY VALEUR FIN_ARRAY .

    $défaut  réduction par utilisation de la règle 4 (ARRAY)


État 32

   16 VALEURS: VALEUR SEPARATEUR . VALEUR

    ENTIER    décalage et aller à l'état 12
    DECIMALE  décalage et aller à l'état 13
    BOOL      décalage et aller à l'état 14
    STRING    décalage et aller à l'état 23

    VALEUR  aller à l'état 36


État 33

    6 MEMBRES: MEMBRES SEPARATEUR MEMBRE .

    $défaut  réduction par utilisation de la règle 6 (MEMBRES)


État 34

    7 MEMBRES: MEMBRE SEPARATEUR MEMBRE .

    $défaut  réduction par utilisation de la règle 7 (MEMBRES)


État 35

   15 VALEURS: VALEURS SEPARATEUR VALEUR .

    $défaut  réduction par utilisation de la règle 15 (VALEURS)


État 36

   16 VALEURS: VALEUR SEPARATEUR VALEUR .

    $défaut  réduction par utilisation de la règle 16 (VALEURS)
